fixed mentioned vulnerabilities